k8s-docs-config/ubuntu-docs.ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ubuntu-docs
  namespace: default
  annotations:
    #kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  # tls:
  # - secretName: ubuntu-docs-tls
  #   hosts:
  #   - docs.ubuntu.com
  rules:
  - host: docs.ubuntu.com
    http:
      paths:
      - path: /
        backend:
          serviceName: ubuntu-docs
          servicePort: 80
      - path: /core
        backend:
          serviceName: ubuntu-docs-core
          servicePort: 80
